[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scripts/BasicEnemy.gd" type="Script" id=1]
[ext_resource path="res://Art/goblin_attack_anim_strip_4.png" type="Texture" id=2]
[ext_resource path="res://Art/goblin_run_anim_strip_6.png" type="Texture" id=3]
[ext_resource path="res://Art/goblin_death_anim_strip_6.png" type="Texture" id=4]
[ext_resource path="res://Art/Light.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 24, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 24, 16 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Run",
"speed": 13.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Death",
"speed": 13.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "Attack",
"speed": 13.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 8, 16 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 16.8222, 16 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 14, 6.98463 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 12.1015, 18.4777 )

[node name="BasicEnemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 52
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 2, 2 )
frames = SubResource( 17 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 0.990323, 1 )
shape = SubResource( 18 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -16, -26 )
enabled = true
collision_mask = 4

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( -16, -2 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 4

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( -28.3536, -8 )
shape = SubResource( 19 )

[node name="AttackBox" type="Area2D" parent="." groups=[
"Enemy",
]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2( -30, -8 )
shape = SubResource( 20 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 48

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( -0.353561, -8 )
shape = SubResource( 21 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 5 )
texture_scale = 0.5
energy = 0.7
shadow_enabled = true

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="AttackBox" to="." method="_on_AttackBox_body_entered"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
